[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cope"
version = "0.0.1"
dependencies = []
authors = [
  {name = "Niall Oswald", email = "niall.oswald20@imperial.ac.uk"},
]
description = "A CLI game to train programmers in debugging AI-written solutions to LeetCode problems."
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
cli = [
  "typer",
]

[project.scripts]
cope = "cope.cli:app"
