[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "cope",
  "server",
]

[project]
name = "cope"
version = "0.0.1"
dependencies = [
  "redis[hiredis]",
  "fastapi[standard]",
]
authors = [
  {name = "Niall Oswald", email = "niall.oswald20@imperial.ac.uk"},
]
description = "A CLI game to train programmers in debugging AI-written solutions to LeetCode problems."
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
cli = [
  "typer",
]

[project.scripts]
cope = "cope.cli:app"
